# yarp-mcpServers

./: .gitignore  README.md  pyproject.toml  yarp_server_launcher.py
resources/contexts/test_servers/: test_battery.ini  test_battery.xml  test_batteryNnavigation.ini  test_batteryNnavigation.xml  test_batteryNnavigationNSynth.ini  test_batteryNnavigationNSynth.xml  test_json.ini  test_json.xml  test_lobbyAmbassador.ini  test_lobbyAmbassador.xml  test_lobbyAmbassador_robot.ini  test_lobbyAmbassador_robot.xml  test_lobbyAmbassador_tour.ini  test_lobbyAmbassador_tour.xml
src/modules/: McpConfigParser.py
src/servers/: __init__.py
src/servers/devices/yarp_mcpServer_IBattery/: Yarp_mcpServer_IBattery.py
src/servers/devices/yarp_mcpServer_INavigation2D/: Yarp_mcpServer_INavigation2D.py
src/servers/devices/yarp_mcpServer_ISpeechSynthesizer/: README.md  Yarp_mcpServer_ISpeechSynthesizer.py
src/servers/lib_server/: YARP_mcpServer_Base.py  YARP_mcpServer_DeviceBase.py  YARP_mcpServer_Notifier.py
src/servers/resources/yarp_mcpServer_JsonRes/: Yarp_mcpServer_JsonRes.py
src/servers/rpc/: __init__.py
src/servers/rpc/yarp_mcpServer_WakeWordRPC/: Yarp_mcpServer_WakeWordRPC.py
src/servers/yarp_mcpServer_IBattery/: Yarp_mcpServer_IBattery.py  example_usage.py
src/servers/yarp_mcpServer_ISpeechSynthesizer/: Yarp_mcpServer_ISpeechSynthesizer.py
