[project]
name = "yarp-mcpServers-devices"
version = "0.1.0"
description = "MCP servers to communicate with yarp::dev interfaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "mcp[cli]>=1.14.1",
    "ollama>=0.6.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
